# orbit-simulation

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_release.sh  calculation_functions.c  calculation_functions.h  config.h  main.c  orbital_sim.c  package_release.sh  sdl_elements.c  update_log.txt
data/: planet_data.csv  spacecraft_data.csv
src/: calculation_functions.c  calculation_functions.h  config.h  main.c  sdl_elements.c  sdl_elements.h  sim_calculations.c  sim_calculations.h  stats_window.c
